# WEPA

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: function-reference.md
experiments/: corruption.ipynb  efficiency.ipynb  ppl.ipynb  run.py  utils.py  varying_bits.ipynb  varying_lambda.ipynb  varying_length.ipynb  varying_length_long.ipynb
experiments/configs/: corruption.yaml  diversity.yaml  efficiency.yaml  ppl.yaml  translation.yaml  translation_unbiased_temp.yaml  varying_bits.yaml  varying_lambda.yaml  varying_length.yaml  varying_length_long.yaml
experiments/runs/: __init__.py  corruption.py  diversity.py  efficiency.py  ppl.py  translation.py  varying_bits.py  varying_lambda.py  varying_length.py  varying_length_long.py
experiments/utils/: __init__.py  config.py  data.py  execution.py  logging.py  metrics.py  runtime.py  watermarks.py
notebooks/: corruption.ipynb  efficiency.ipynb  ppl.ipynb  translation.ipynb  varying_bits.ipynb  varying_lambda.ipynb  varying_length.ipynb  varying_length_long.ipynb
scripts/: corruption.sh  diversity.sh  ppl.sh  run_corruption.py  run_ppl.py  run_varying_lambda.py  run_varying_length.py  run_varying_length_long.py  translation.sh  translation_8gpu.sh  translation_unbiased_8gpu.sh  varying_bits.sh  varying_lambda.sh  varying_length.sh  varying_length_long.sh
src/watermarker/: base.py  dip.py  exp.py  gumbel_levenshtein.pyx  kgw.py  topp.py  unbiased.py  wepa.py
